--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
 
     <h1>This is the first thing in Github</h1>
-    <h2>adsjbiasjd</h2>
+    <h1>This is the first thing in Github</h1>
+    <h1>This is the first thing in Github</h1>
   </head>
   <body>
 	<script src="index.js"></script>
